--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/dutiyesh/react-expand-collapse#readme",
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0",
+    "react": "^15.3.0 || ^16.0.0 || ^17.0.0",
     "react-dom": "^15.3.0 || ^16.0.0"
   },
   "devDependencies": {
