--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "jest": "^21.2.1",
     "prettier": "^1.9.2",
     "raf": "^3.4.0",
-    "react": "^16.0.0",
+    "react": "^16.0.0 || ^17.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
     "style-loader": "^0.19.0",
