--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/dutiyesh/react-expand-collapse#readme",
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0 || ^17.0.2",
-    "react-dom": "^15.3.0 || ^16.0.0" || ^17.0.2"
+    "react-dom": "^15.3.0 || ^16.0.0 || ^17.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
